--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>MyMoney Pro</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link rel="manifest" href="/MyMoney/manifest.json">
+<link rel="apple-touch-icon" href="/MyMoney/icons/icon-192x192.png">
     <style>
         * {
             margin: 0;
