Add crossorigin attribute to Chart.js script tag

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js" crossorigin="anonymous"></script>
     <script>
         // Service Worker Registration
 if ('serviceWorker' in navigator) {
