Add BDT option to currency selection

--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,7 @@
                 <option value="£">GBP (£)</option>
                 <option value="¥">JPY (¥)</option>
                 <option value="₹">INR (₹)</option>
+                <option value="৳">BDT (৳)</option>
             </select>
         </div>
 
